--- a/index.html
+++ b/index.html
@@ -1,1 +1,10 @@
-niaho
+<!DOCTYPE html>
+<html>
+	<head>
+		<meta charset="utf-8">
+		<title>Minorant的测试主页</title>
+	</head>
+	<body>
+		<a href="/new_file.html">点我测试</a>
+	</body>
+</html>
