--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
 		<title>Minorant的测试主页</title>
 	</head>
 	<body>
-		<a href="/new_file.html">点我测试</a>
+		<a href="test/new_file.html">点我测试</a>
 	</body>
 </html>
