--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
 		<title>Minorant的测试主页</title>
 	</head>
 	<body>
-		<a href="/test/new_file.html">点我测试</a>
+		<a href="https://minorant.github.io/test/new_file.html">点我测试</a>
 	</body>
 </html>
