--- a/index.html
+++ b/index.html
@@ -3,8 +3,13 @@
 	<head>
 		<meta charset="utf-8">
 		<title>Minorant的测试主页</title>
+		
 	</head>
 	<body>
 		<a href="/new_file.html">点我测试</a>
+		<br />
+		<a href="st.jpg">
+			<button>点我康♂尚进好图</button>
+		</a>
 	</body>
 </html>
