--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 		<a href="/new_file.html">点我测试</a>
 		<br />
 		<a href="st.jpg">
-			<button>点我康♂尚进好图</button>
+			<button>点我康♂尚进哥哥哥好图</button>
 		</a>
 	</body>
 </html>
