--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
 		
 	</head>
 	<body>
-		<a href="/new_file.html">点我测试</a>
+		<a href="/new_file.html">测试1</a>
+		<a href="test2.html">测试2</a>
 		<br />
 		<a href="st.jpg">
 			<button>点我康康♂尚进哥哥哥好图</button>
