更改了一个命名错误！！

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	</head>
 	<body>
 		<a href="/new_file.html">测试1</a>
-		<a href="test2.html">测试2</a>
+		<a href="/test2.html">测试2</a>
 		<br />
 		<a href="st.jpg">
 			<button>点我康康♂尚进哥哥哥好图</button>
