--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
 		<br />
 		<a href="/test3.html">测试3 </a>
 		<br>
+		<a href="test4.html">测试四</a>
+		<br>
 		<a href="st.jpg">
 			<button>点我康康♂尚进哥哥哥好图</button>
 		</a>
