--- a/test3.html
+++ b/test3.html
@@ -3,6 +3,7 @@
 	<head>
 	  <title>例子22-3 设备移动事件</title>
 	  <meta charset="UTF-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 	  <script type="text/javascript">
 			function orientationHandler(event) {
 			  document.getElementById("alpha").innerHTML = event.alpha;
