--- a/test4.html
+++ b/test4.html
@@ -4,6 +4,7 @@
     <head>
 		<title>例子22-2 设备方向</title>
 		<meta charset="UTF-8" />
+	    		<meta name="viewport" content="width=device-width, initial-scale=1">
   </head>
   <body>
     <p>左右转动：<span id="alpha">0</span>度</p>
