改变了数字

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 		<br />
 		<a href="/test3.html">测试3 </a>
 		<br>
-		<a href="test4.html">测试四</a>
+		<a href="test4.html">测试4</a>
 		<br>
 		<a href="st.jpg">
 			<button>点我康康♂尚进哥哥哥好图</button>
