为爬虫xpath的实验做div处理

--- a/test2.html
+++ b/test2.html
@@ -22,7 +22,9 @@
 	<body>
 		<div id="test1">
 			<!-- 句柄 -->
+			<div class = "cnm">
 			<p>这是一个测试的HTML文件</p>
+			</div>
 			<button id="btn">这是一个神奇的按钮</button>
 			<p id="pid">ss<br></p>
 			<script>
