--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
 		<br>
 		<a href="test4.html">测试4</a>
 		<br>
+		<a href="test5.html">测试5</a>
+		<br>
 		<a href="WaterfallFlowDemo/index.html">瀑布流测试</a>
 		<a href="st.jpg">
 			<button>点我康康♂尚进哥哥哥好图</button>
