--- a/MyHomework/test5.html
+++ b/MyHomework/test5.html
@@ -9,41 +9,21 @@
 		<script src="https://cdn.staticfile.org/jquery/3.2.1/jquery.min.js"></script>
 		<script src="https://cdn.staticfile.org/popper.js/1.15.0/umd/popper.min.js"></script>
 		<script src="https://cdn.staticfile.org/twitter-bootstrap/4.3.1/js/bootstrap.min.js"></script>
-		<style>
-			.bottom{
-		background-color: #333333;
-	 }
-	 .navSearch>form>input{
-		 width: 300px!important;
-	 }
-	 .navSearch>form>button{
-		 margin-left: 5px;
-	 }
-	 .erwm{
-		 width: 100px;
-		 height: 100px;
-	 }
-	 .nav-item{
-		 padding-right: 20px;
-	 }
-	 .fa-github{
-		 color: #56B6C2;
-	 }
-  </style>
+		<link rel="stylesheet" href="style.css"/>
 	</head>
 	<body>
-		<div class="jumbotron text-center" style="margin-bottom:0">
+		<div class="jumbotron text-left text-light" style="margin-bottom:0">
 			<h1>有空改成动画</h1>
 		</div>
 		<nav class="navbar navbar-expand-sm bg-dark navbar-dark" style="margin-bottom: 20px;">
-			<a class="navbar-brand" href="#">主页</a>
+			<a class="navbar-brand" href="test5.html">主页</a>
 			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
 				<span class="navbar-toggler-icon"></span>
 			</button>
 			<div class="collapse navbar-collapse" id="collapsibleNavbar">
 				<ul class="navbar-nav navSetting">
 					<li class="nav-item">
-						<a class="nav-link" href="#">链接</a>
+						<a class="nav-link" href="test6.html">进制装换</a>
 					</li>
 					<li class="nav-item">
 						<a class="nav-link" href="#">链接</a>
@@ -60,40 +40,40 @@
 				</div>
 			</div>
 		</nav>
-		<div class="container-fluid">
+		<div class="container">
 			<p>乾いた心でかぃけ抜ける</p>
 			<p>ごめんね何も出来なくて</p>
 			<p>痛みを分かち合う事さえ</p>
 			<p>あなたは许してくれない</p>
-
+		
 			<p>无垢に生きる为振り向かず</p>
 			<p>背中向けて去ってしまうonthelonelyrail</p>
-
+		
 			<p>私付いていくよどんな辛い世界の暗の中でさえ</p>
 			<p>きっとあなたは辉いて</p>
 			<p>越える未来の果て弱さ故に魂壊されぬ様に</p>
 			<p>Myway重なるよ今</p>
 			<p>二人にGodBless</p>
-
+		
 			<p>远くて热くなる想いは</p>
 			<p>现実溶かして彷徨う</p>
 			<p>逢いたい気持ちに理由は无い</p>
 			<p>あなたへ溢れ出すLovin'you</p>
-
+		
 			<p>せめて美しい梦だけを</p>
 			<p>描きながら追い挂けよう</p>
 			<p>foryourLonelyHeart</p>
-
+		
 			<p>やめて嘘はあなたらしくないよ</p>
 			<p>目を见てこれからの事を话そう</p>
 			<p>私が苦労してる位</p>
 			<p>未来だって强くなって</p>
 			<p>运命変えられるかもね</p>
 			<p>Mywish叶えた祈り全てはGodknows</p>
-
+		
 			<p>あなたがいて私がいて他の人は消えてしまった</p>
 			<p>淡い梦の美しさを描きながら伤迹なぞる</p>
-
+		
 			<p>だから私付いていくよどんな辛い世界の暗の中でさえ</p>
 			<p>きっとあなたは辉いて</p>
 			<p>越える未来の果て弱さ故に魂壊されぬ様に</p>
