--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 		<br>
 		<a href="test4.html">测试4</a>
 		<br>
-		<a href="test5.html">测试5</a>
+		<a href="MyHomework/test5.html">测试5</a>
 		<br>
 		<a href="WaterfallFlowDemo/index.html">瀑布流测试</a>
 		<a href="st.jpg">
