--- a/MyHomework/test5.html
+++ b/MyHomework/test5.html
@@ -12,8 +12,8 @@
 		<link rel="stylesheet" href="style.css"/>
 	</head>
 	<body>
-		<div class="jumbotron text-left text-light" style="margin-bottom:0">
-			<h1>有空改成动画</h1>
+		<div class="jumbotron jumbotron-fluid text-left text-light" style="margin-bottom:0">
+			<h1 style="margin-left: 30px;">SOS団</h1>
 		</div>
 		<nav class="navbar navbar-expand-sm bg-dark navbar-dark" style="margin-bottom: 20px;">
 			<a class="navbar-brand" href="test5.html">主页</a>
@@ -22,14 +22,21 @@
 			</button>
 			<div class="collapse navbar-collapse" id="collapsibleNavbar">
 				<ul class="navbar-nav navSetting">
-					<li class="nav-item">
-						<a class="nav-link" href="test6.html">进制装换</a>
+					 <li class="nav-item dropdown">
+					      <a class="nav-link dropdown-toggle" href="#" data-toggle="dropdown">
+					        数学工具
+					      </a>
+					      <div class="dropdown-menu">
+					        <a class="dropdown-item" href="test6.html">进制转换</a>
+					      </div>
 					</li>
-					<li class="nav-item">
-						<a class="nav-link" href="#">链接</a>
-					</li>
-					<li class="nav-item">
-						<a class="nav-link" href="#">链接</a>
+					<li class="nav-item dropdown">
+					      <a class="nav-link dropdown-toggle" href="#" data-toggle="dropdown">
+					        校园工具
+					      </a>
+					      <div class="dropdown-menu">
+					        <a class="dropdown-item" href="#">体测计算器</a>
+					      </div>
 					</li>
 				</ul>
 				<div class="navSearch ml-auto">
@@ -41,6 +48,11 @@
 			</div>
 		</nav>
 		<div class="container">
+			<h1>God knwos...</h1>
+			<i><small>作词：畑亚贵
+			编曲/作曲：神前晓
+			演唱：凉宫春日（平野绫）</small></i>
+			<br /><br />
 			<p>乾いた心でかぃけ抜ける</p>
 			<p>ごめんね何も出来なくて</p>
 			<p>痛みを分かち合う事さえ</p>
