增加了体测网页

--- a/MyHomework/test5.html
+++ b/MyHomework/test5.html
@@ -12,8 +12,12 @@
 		<link rel="stylesheet" href="style.css"/>
 	</head>
 	<body>
-		<div class="jumbotron jumbotron-fluid text-left text-light" style="margin-bottom:0">
-			<h1 style="margin-left: 30px;">SOS団</h1>
+		<div class="jumbotron jumbotron-fluid text-left text-light headBackground" style="margin-bottom:0">
+			<div class="headImg text-center">
+				<img src="head.jpg" />
+				<h1 style="margin-top: 20px;">SOS団長</h1>
+			</div>
+			
 		</div>
 		<nav class="navbar navbar-expand-sm bg-dark navbar-dark" style="margin-bottom: 20px;">
 			<a class="navbar-brand" href="test5.html">主页</a>
@@ -35,7 +39,7 @@
 					        校园工具
 					      </a>
 					      <div class="dropdown-menu">
-					        <a class="dropdown-item" href="#">体测计算器</a>
+					        <a class="dropdown-item" href="tccal.html">体测计算器</a>
 					      </div>
 					</li>
 				</ul>
