--- a/MyHomework/test6.html
+++ b/MyHomework/test6.html
@@ -12,8 +12,12 @@
 		<link rel="stylesheet" href="style.css"/>
 	</head>
 	<body>
-		<div class="jumbotron jumbotron-fluid text-left text-light" style="margin-bottom:0">
-			<h1 style="margin-left: 30px;">SOS団</h1>
+		<div class="jumbotron jumbotron-fluid text-left text-light headBackground" style="margin-bottom:0">
+			<div class="headImg text-center">
+				<img src="head.jpg" />
+				<h1 style="margin-top: 20px;">SOS団長</h1>
+			</div>
+			
 		</div>
 		<nav class="navbar navbar-expand-sm bg-dark navbar-dark" style="margin-bottom: 20px;">
 			<a class="navbar-brand" href="test5.html">主页</a>
@@ -35,7 +39,7 @@
 					        校园工具
 					      </a>
 					      <div class="dropdown-menu">
-					        <a class="dropdown-item" href="#">体测计算器</a>
+					        <a class="dropdown-item" href="tccal.html">体测计算器</a>
 					      </div>
 					</li>
 				</ul>
@@ -52,7 +56,8 @@
 				<h2><i>在线进制转换器</i></h2><br />
 				
 			</div>
-			<p>当前支持2~10进制位之间的互换</p>
+			<s>当前支持2~10进制位之间的互换</s>
+			<p class="text-danger">当前什么都不支持(╯°口°)╯(┴—┴</p>
 			<div class="row" style="margin-bottom: 30px;">
 				
 					<div class="col-sm-8">		
@@ -106,6 +111,9 @@
 				$("#Output").val("")
 			});
 		});
+	</script>
+	<script>
+		
 	</script>
 	</body>
 </html>
