--- a/real/tccal.html
+++ b/real/tccal.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Bootstrap 实例</title>
+		<title>SOS団-体测计算器</title>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<link rel="stylesheet" href="https://cdn.staticfile.org/twitter-bootstrap/4.3.1/css/bootstrap.min.css">
@@ -53,7 +53,12 @@
 			</div>
 		</nav>
 		<div class="container">
-			<h1 style="margin-bottom: 30px;">体测计算器</h1>
+			<div class="row">
+				<h1 style="margin-bottom: 10px;">体测计算器</h1>
+			</div>
+			<div class="row" style="margin-bottom: 20px;">
+				<i ><small>ps.因为没有适配移动端，所以可能移动端的排序有些许问题，有空优化下orz</small></i>
+			</div>
 			<div class="row">
 				<div class="col-md-6">
 					<table class="table table-hover" style="max-width: 500px;">
