--- a/real/tccal.html
+++ b/real/tccal.html
@@ -56,7 +56,7 @@
 			<div class="row" style="margin-left: 10px;">
 				<h1 style="margin-bottom: 10px;">体测计算器</h1>
 			</div>
-			<div class="row" style="margin-bottom: 20px; margin-left: 15px;">
+			<div class="row" style="margin-bottom: 20px; margin-left: 15px;margin-right: 15px;">
 				<i ><small>ps.因为没有适配移动端，所以可能移动端的排序有些许问题，有空优化下orz</small></i>
 			</div>
 			<div class="row">
