--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 		
 	</head>
 	<body>
+		<a href="/real/tccal.html">作业</a><br>
 		<a href="/new_file.html">测试1</a>
 		<br>
 		<a href="/test2.html">测试2</a>
