--- a/real/tccal.html
+++ b/real/tccal.html
@@ -16,7 +16,7 @@
 		<div class="jumbotron jumbotron-fluid text-left text-light headBackground" style="margin-bottom:0">
 			<div class="headImg text-center">
 				<img src="head.jpg" />
-				<h1 style="margin-top: 20px;">SOS団長</h1>
+				<h1 style="margin-top: 20px;">SOS団</h1>
 			</div>
 			
 		</div>
